--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.3.4",
     "@eslint/config-array": "^0.19.0",
     "@eslint/object-schema": "^2.1.4",
     "@notionhq/client": "^2.2.15",
@@ -18,6 +19,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
+    "react-syntax-highlighter": "^15.6.1",
     "rehype-katex": "^7.0.1",
     "remark-math": "^6.0.0",
     "rimraf": "^6.0.1"
@@ -26,6 +28,7 @@
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "eslint": "^9.14.0",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
@@ -33,7 +36,6 @@
     "typescript": "^5"
   },
   "resolutions": {
-  "punycode": "^2.3.1"
-}
-
+    "punycode": "^2.3.1"
+  }
 }
