--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@notionhq/client": "^2.2.15",
     "glob": "^11.0.0",
     "katex": "^0.16.11",
+    "mdast-util-to-string": "^4.0.0",
     "next": "15.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -22,6 +23,7 @@
     "react-syntax-highlighter": "^15.6.1",
     "rehype-katex": "^7.0.1",
     "remark-math": "^6.0.0",
+    "remark-parse": "^11.0.0",
     "rimraf": "^6.0.1"
   },
   "devDependencies": {
